??/??/16 jbarnoud, orbeckst

  * 0.15.1
    - Added a plugin to list the non-closed file handle (Issue #853, PR #874).
      The plugin can be disabled with --no-open-files.
    - The test_failure test can be made fail by setting the MDA_FAILURE_TEST
      environment variable (PR #874)
    - replaced XTC_HOLE test trajectory with more meaningful one MULTIPDB_HOLE

05/15/16  orbeckst, jbarnoud, pedrishi, fiona-naughton, jdetle
  * 0.15.0
    - removed biopython PDB parser for coordinates and topology (Issue #777)
    - Added test for weighted rmsd (issue #814)
    - metadata update: link download_url to GitHub releases so that
      Depsy recognizes contributors (issue #749) and added
      @richardjgowers as maintainer
    - a __version__ variable is now exposed; it is built by setup.py from the
      AUTHORS file (Issue #784)
    - Removed all bare assert (Issue #724)
    - added tests for GRO format
    - added tempdir module

02/28/16 manuel.nuno.melo
  * 0.14.0

    - Added the cleanup plugin (--with-mda_cleanup) to delete offset files
      after tests have run (Issue 669)
    - Made memleak testing python 3 compliant (Issue 662). It may be a moot
      point since python 3.4 now cleverly deals with leaks.

01/16/16 orbeckst
  * 0.13.0

    - removed ez_setup.py

09/07/2015 manuel.nuno.melo, orbeckst
  * 0.11.0

    - Overhaul of the test subsystem.
    - Tests now implement nose plugins, as a submodule. (Issue 331)
      Available plugins are: memleak testing, stderr capturing (for quieter
      test runs), and proper knownfailure implementation (Issue 338).
    - renamed test_selections.py to test_atomselections.py
    - new test_selections.py is now testing MDAnalysis.selections
      (Issue #353)
    - Added new DIMS DCD test datafile
    - Added tests for PSAnalysis
    - Update TPR parser tests for Gromacs 5

02/11/2012 orbeckst, seb-buch

  * 0.7.5

    - test package is now called 'MDAnalysisTests'